Created "main.py" and started using "benchmark_class" (also changed benchmark class a bit)

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ NumPy
 Koalas
 pyspark
 ipykernel
+modin
+joblib
+cudf-cu12       # May require "--extra-index-url"=https://pypi.nvidia.com
+dask-cudf-cu12  # May require "--extra-index-url"=https://pypi.nvidia.com
