Few changes to main, requirements and class... Now main code works at least until modin, dask still missing a test

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,5 @@ pyspark
 ipykernel
 modin
 joblib
-cudf-cu12       # May require "--extra-index-url"=https://pypi.nvidia.com
-dask-cudf-cu12  # May require "--extra-index-url"=https://pypi.nvidia.com
+# cudf-cu12==24.4.*       # May require "--extra-index-url=https://pypi.nvidia.com"
+# dask-cudf-cu12==24.4.*  # May require "--extra-index-url=https://pypi.nvidia.com"
