--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,10 @@ code/notebooks/dask-worker-space/worker-m3d0xt3y.dirlock
 code/notebooks/dask-worker-space/worker-qn242_xj.dirlock
 code/notebooks/dask-worker-space/worker-rny67kem.dirlock
 datasets/*
+.vscode/launch.json
+dask-worker-space/global.lock
+dask-worker-space/purge.lock
+dask-worker-space/worker-snabopwp.dirlock
+dask-worker-space/worker-zoymuiot.dirlock
+dask-worker-space/worker-d_tglhbx.dirlock
+dask-worker-space/worker-hlu44tne.dirlock
