Ran a few more runs and executed local-exec-summary

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,6 @@ ipykernel
 modin
 joblib
 scipy
+matplotlib
 # cudf-cu12==24.4.*       # May require "--extra-index-url=https://pypi.nvidia.com"
 # dask-cudf-cu12==24.4.*  # May require "--extra-index-url=https://pypi.nvidia.com"
