Fixed set-up env Script and created 2 requirement files

--- a/requirements_part2.txt
+++ b/requirements_part2.txt
@@ -3,8 +3,7 @@ requests
 Dask[complete]
 pandas
 PyArrow
-NumPy
-Koalas
+NumPy     # Due to Koalas being a bit old, it requires this version
 pyspark
 ipykernel
 modin
