- Added new requirements - Changed benchmark class to include MPI for Modin. - Added more requirements to set-up-linux-env.sh - Canged the treat_files func in download_taxi_dataset - Removed "calculate_distance" from the download_taxi_dataset.py - Added trial and error run_benchmark

--- a/requirements_part2.txt
+++ b/requirements_part2.txt
@@ -10,5 +10,9 @@ modin
 joblib
 scipy
 matplotlib
+ray==2.24.0
+unidist==0.7.0
+mpi4py==3.1.6
+ipywidgets
 # cudf-cu12==24.4.*       # May require "--extra-index-url=https://pypi.nvidia.com"
 # dask-cudf-cu12==24.4.*  # May require "--extra-index-url=https://pypi.nvidia.com"
