--- a/requirements_part1.txt
+++ b/requirements_part1.txt
@@ -9,4 +9,4 @@ PyArrow==12.0.1
 ipykernel==6.16.2
 scipy==1.7.3
 matplotlib==3.5.3
-bokeh>=2.1.1    # Necessary for dask dashboard
+bokeh==2.4.3    # Necessary for dask dashboard
